--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_deliverer_map">Map</string>
+    <string name="title_activity_customer_map">Map</string>
 
     <!-- Strings related to login -->
 
